--- a/stylesheet/backgroundimage.css
+++ b/stylesheet/backgroundimage.css
@@ -1,9 +1,9 @@
 div{
-    border: 4px solid yellow;
+    border: 15px dotted red;
     background-image: url("shiv.jpeg");
     background-repeat: no-repeat;
     width: 600px;
     height: 340px;
-    background-size: contain;
+    background-size: cover;
     opacity: 0.5;
 }
